移动工程，增加方法区oom的设置，jdk8开始放弃了PermGen，使用MateSpace代替， jdk9中完全删除